--- a/css/aula/style.css
+++ b/css/aula/style.css
@@ -1,6 +1,11 @@
 body {
   font-family: Arial;
 }
+
+#cabecalho {
+  font-size: 50px;
+}
+
 p {
   color: red;
 }
@@ -12,10 +17,12 @@ p {
   }
 */
 
-h1.destaque em, 
+h1.destaque em,
 h1.destaque strong {
   color: purple;
   font-family: Arial;
 }
 
-
+ul.elementos  li  a {
+  color: blue;
+}
