--- a/css/exercicios/texto/css/style.css
+++ b/css/exercicios/texto/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial, Tahoma, sans-serif;
   line-height: 180%;
   /* padding: 0 200px; */
   padding-left: 200px;
